--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_SRV=mongodb+srv://jthi:<password>@cluster0.lndfzte.mongodb.net/?retryWrites=true&w=majority
+MONGO_SRV="mongodb+srv://jthi:<password>@cluster0.lndfzte.mongodb.net/?retryWrites=true&w=majority"
