--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_SRV=mongodb+srv://jthi:Pb26761718@cluster0.kf46hlo.mongodb.net/?retryWrites=true&w=majority
+MONGO_SRV="mongodb+srv://jthi:Pb26761718@cluster0.kf46hlo.mongodb.net/?retryWrites=true&w=majority"
